plugins {
    id 'java'
    id 'war'
}

group 'by.innowise'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.2'
    springVersion = '6.2.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

war {
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
}

wrapper {
    version = "8.5"
}

//tasks.named('war') {
//    destinationDirectory = file("$rootDir/deploy")
//}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    compileOnly('jakarta.servlet:jakarta.servlet-api:5.0.0')
    compileOnly 'org.projectlombok:lombok:1.18.36'

    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    implementation 'org.hibernate:hibernate-core:6.0.2.Final'
    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
    implementation 'org.postgresql:postgresql:42.7.4'
    implementation 'org.projectlombok:lombok:1.18.36'
    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.2'
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
    implementation 'ch.qos.logback:logback-classic:1.5.12'
    implementation 'org.mindrot:jbcrypt:0.4'
    implementation 'org.hibernate.orm:hibernate-hikaricp:7.0.0.Beta3'
    implementation 'org.ehcache:ehcache:3.10.0:jakarta'
    implementation "org.springframework:spring-core:${springVersion}"
    implementation "org.springframework:spring-context:${springVersion}"
    implementation "org.springframework:spring-web:${springVersion}"
    implementation "org.springframework:spring-webmvc:${springVersion}"
    implementation 'org.springframework.security:spring-security-web:6.4.2'
    implementation 'org.springframework.data:spring-data-jpa:3.4.2'
    implementation 'org.yaml:snakeyaml:2.0'
    implementation 'commons-fileupload:commons-fileupload:1.5'
    implementation "org.springframework.security:spring-security-core:${springVersion}"
    implementation "org.springframework.security:spring-security-web:${springVersion}"
    implementation "org.springframework.security:spring-security-config:${springVersion}"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

test {
    useJUnitPlatform()
}

